# roqtune

./: .cursorrules  .gitignore  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  MANUAL_TESTING.md  README.md  build.rs  roqtune.system.toml
.github/workflows/: ci.yml  linux-flatpak-build.yml  macos-build.yml  release.yml  windows-build.yml
config/: color_schemes.toml  config.system.toml  layout.system.toml
flatpak/: io.github.alexzah.roqtune.desktop  io.github.alexzah.roqtune.json  io.github.alexzah.roqtune.metainfo.xml  io.github.roqtune.Roqtune.desktop  io.github.roqtune.Roqtune.json  io.github.roqtune.Roqtune.metainfo.xml
scripts/: flatpak-local.sh
src/: app_config_coordinator.rs  app_context.rs  app_runtime.rs  audio_decoder.rs  audio_decoder_old.rs  audio_player.rs  audio_player_old.rs  audio_probe.rs  cast_manager.rs  config.rs  config_persistence.rs  db_manager.rs  image_pipeline.rs  integration_keyring.rs  integration_manager.rs  integration_uri.rs  layout.rs  library_enrichment_manager.rs  library_manager.rs  main.rs  main_old.rs  media_controls_manager.rs  media_file_discovery.rs  metadata_manager.rs  metadata_tags.rs  music_player.slint  playlist.rs  playlist_manager.rs  protocol.rs  protocol_utils.rs  roqtune.slint  runtime_config.rs  text_template.rs  theme.rs  ui_manager.rs
src/app_bootstrap/: mod.rs  services.rs
src/app_callbacks/: bus_forwarding.rs  imports_library.rs  layout_editor.rs  mod.rs  playlist_columns.rs  playlist_editing.rs  settings_ui.rs  subsonic_settings.rs
src/audio/: audio_decoder.rs  audio_player.rs  audio_probe.rs  mod.rs  output_option_selection.rs
src/backends/: mod.rs  opensubsonic.rs
src/cast/: cast_manager.rs  mod.rs
src/integration/: integration_keyring.rs  integration_manager.rs  mod.rs  opensubsonic_controller.rs
src/metadata/: metadata_manager.rs  metadata_tags.rs  mod.rs
src/playlist/: playlist.rs  playlist_manager.rs
src/runtime/: audio_runtime_reactor.rs  mod.rs
src/ui/: icons.slint  layout_editor_state.rs  mod.rs  playlist_columns.rs  slint_contract_tests.rs  theme_palette.slint  types.slint
src/ui/components/: controls.slint  library.slint  media.slint  menus.slint  playlist.slint  settings.slint  status.slint  tabs.slint
