[package]
name = "roqtune"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.15" # UI framework
rfd = "0.17.1"   # For file dialogs
id3 = "1.16.2" # Metadata tags
ape = "0.6.0" # Metadata tags
metaflac = "0.2.8" # Metadata tags
log = "0.4.26" # logs
colog = "1.3.0" # logs
rand = "0.9.0"  # For shuffle and random playback
getrandom = "0.3.1"  # For secure random seed generation
symphonia = {version = "=0.4.0", features = [
    "mp3",
    "wav", 
    "flac",
    "aac",
    "isomp4",
    "ogg"
] } # For audio decoding
cpal = "0.15.3" # For audio playback
tokio = { version = "1.43.0", features = ["sync"] }
rubato = "0.16.1" # For audio resampling
dirs = "6.0.0" # For getting user's home directory
toml = "0.8.20" # For reading and writing toml files
toml_edit = "0.22.22" # For comment-preserving config updates
serde = "1.0.219"
serde_json = "1.0.140"
rusqlite = { version = "0.32.1", features = ["bundled"] }
governor = "0.6" # Rate limiting for UI updates

[build-dependencies]
slint-build = "1.15"

[dependencies.uuid]
version = "1.15.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
