[package]
name = "roqtune"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.15.0", default-features = false, features = ["std", "unstable-winit-030", "renderer-femtovg", "renderer-software", "accessibility", "compat-1-2"] } # UI framework (Qt-free via explicit winit backend)
rfd = "0.17.2"   # For file dialogs
log = "0.4.29" # logs
colog = "1.4.0" # logs
rand = "0.10.0"  # For shuffle and random playback
getrandom = "0.4.1"  # For secure random seed generation
symphonia = {version = "0.5.5", features = [
    "all"
] } # For audio decoding
cpal = "0.15.3" # For audio playback
tokio = { version = "1.49.0", features = ["sync"] }
rubato = "0.16.2" # For audio resampling
dirs = "6.0.0" # For getting user's home directory
toml = "0.9.12" # For reading and writing toml files
toml_edit = "0.25.0" # For comment-preserving config updates
serde = "1.0.228"
serde_json = "1.0.149"
rusqlite = { version = "0.38.0", features = ["bundled"] }
governor = "0.10.4" # Rate limiting for UI updates
souvlaki = "0.8.3" # Cross-platform media controls (MPRIS/SMTC/Now Playing)
lofty = "0.23.1" # Reading / writing metadata tags
ureq = { version = "2.12.1", features = ["json"] }
urlencoding = "2.1.3"
webbrowser = "1.0.6"

[build-dependencies]
slint-build = "1.15.0"

[dependencies.uuid]
version = "1.20.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
